Adding a little color to the styles

--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,10 @@ $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
-$grey-color:       #828282;
+$header-background-color: #f1f8fd;
+$footer-background-color: #f1f8fd;
+
+$grey-color:       #4a84ad;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
