--- a/_sass/_promise-zone-builder.scss
+++ b/_sass/_promise-zone-builder.scss
@@ -51,7 +51,7 @@ button:hover {
 #buttons {
 	padding: 10px 0;
 }
-#svg-container {
+#svg-map-container {
 	width: 100%;
 	border: 1px solid black;
 }
