Moving js to its own js files so stops getting parsed by jekyll

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,5 +28,7 @@
   <script src="{{ "/js/colorbrewer.js" | prepend: site.baseurl }}"></script>
   {% endif %}
 
-
+  {% if page.pageJs %}
+  <script src="{{ site.baseurl }}/js/{{ page.pageJs }}.js"></script>
+  {% endif %}
 </head>
