--- a/_sass/_promise-zone-builder.scss
+++ b/_sass/_promise-zone-builder.scss
@@ -29,13 +29,38 @@
   pointer-events: all;
 }
 button {
-  padding: 2px 10px;
-  font-size: 0.75em;
-  font-weight: bold;
+    /*background-color: #008CBA; /* Blue */
+    border: none;
+    background-color: white;
+    color: black;
+    border: 2px solid #008CBA;
+ /*   color: white;*/
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 8px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
 }
 button:hover {
-	background-color: #eee;
+	background-color: #008CBA;
+	color: white;
 }
+
+button#neediest-neighbor[disabled=disabled], button#neediest_neighbor:disabled {
+	background-color: #eee;
+	color: #777;
+}
+button#neediest-neighbor {
+	border: 2px solid #4CAF50;
+}
+button#neediest-neighbor:hover {
+	background-color: #4CAF50;
+	color: white;
+}
+
 
 /****** CSS for all the divs */
 #container {
@@ -70,7 +95,7 @@ button:hover {
 #pz-detail {
 	width: 100%;
 	overflow: scroll;
-	height: 200px;
+	height: 240px;
 }
 #pz-detail-table {
 	width: 100%;
@@ -84,4 +109,7 @@ h1 {
 /*	line-height: 0.8em;
 	font-size: 0.5em;*/
 }
-
+#content {
+	display: block;
+	margin: 30px 0;
+}
