--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
   {% if page.useD3 %}
-  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="//d3js.org/d3.v3.min.js"></script>
   {% endif %}
 
   {% if page.useTopoJSON %}
@@ -25,21 +25,23 @@
   {% endif %}
 
   {% if page.useColorBrewer %}
-  <script src="{{ "/js/colorbrewer.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ site.baseurl }}/js/colorbrewer.js"></script>
   {% endif %}
 
   {% if page.pageJs %}
   <script src="{{ site.baseurl }}/js/{{ page.pageJs }}.js"></script>
   {% endif %}
 
+  {% if site.googleAnalyticsKey %}
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-79018683-1', 'auto');
+  ga('create', '{{ site.googleAnalyticsKey }}', 'auto');
   ga('send', 'pageview');
 
   </script>
+  {% endif %}
 </head>
