Initially setting up linking from ranked list

--- a/css/main.scss
+++ b/css/main.scss
@@ -54,5 +54,6 @@ $on-laptop:        800px;
 		"layout",
 		"syntax-highlighting",
 		"visualize",
-		"promise-zone-builder"
+		"promise-zone-builder",
+		"ranked-list"
 ;
