--- a/_sass/_visualize.scss
+++ b/_sass/_visualize.scss
@@ -1,30 +1,8 @@
 /**
  * Visualization CSS
  */
-#svg-container, #candidates {
+#svg-container {
 	font-family: Arial, sans-serif;
-
-}
-
-#candidates {
-	#settings {
-		display: inline-block;
-		border-radius: 10px;
-		border-color: #008cba
-	}
-
-	ol {
-		display: inline-block;
-		border-top: 2em;
-
-		li {
-			border-left: 1px solid $grey-color;
-			margin: 5px;
-			padding: 5px;
-			border-radius: 8px 8px 0;
-			border-bottom: 2px solid $grey-color;
-		}
-	}
 }
 
 #graph {
@@ -39,7 +17,6 @@ g {
 .pz {
 	fill: "red";
 	fill-opacity: 0.5;
-	color: red;
 }
 
 .pz-hidden .pz {
