Linking up ranked list to the graph. todo: link to the builder

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,8 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   {% endif %}
 
+  <script src="{{ site.baseurl }}/js/common.js"></script>
+
   {% if page.useColorBrewer %}
   <script src="{{ site.baseurl }}/js/colorbrewer.js"></script>
   {% endif %}
