--- a/_sass/_ranked-list.scss
+++ b/_sass/_ranked-list.scss
@@ -14,6 +14,11 @@
 		color: red;
 	}
 
+	.build-link {
+		/* link not yet ready */
+		display: none;
+	}
+
 	ol {
 		display: inline-block;
 		border-top: 2em;
