--- a/_sass/_promise-zone-builder.scss
+++ b/_sass/_promise-zone-builder.scss
@@ -65,41 +65,70 @@ button#neediest-neighbor:hover {
 /****** CSS for all the divs */
 #container {
 	/*border: 1px solid black;*/
-	width: 1020px;
-	font-family: 'Open Sans', sans-serif;
+	/*width: 1020px;*/
+	/*font-family: 'Open Sans', sans-serif;*/
+	position: relative;
+	border-radius: 16px;
 }
-#right-column {
+/*#right-column {
 	width: 700px;
 	display: inline;
 	float: right;
-}
+}*/
 #buttons {
 	padding: 10px 0;
+	position: absolute;
+	right: 20px;
+	top: 0;
 }
 #svg-map-container {
 	width: 100%;
 	border: 1px solid black;
 }
-#left-column {
-	width: 318px;
-	float: left;
-	display: inline;
+#svg-map-container, #map {
+	border-radius: 16px;
 }
-
+#left-column {
+	/*width: 318px;*/
+	max-height: 100%;
+	/*float: left;
+	display: inline;*/
+	left: 20px;
+	top: 10px;
+	position: absolute;
+	color: #000;
+	/*background-color: #fff;
+	opacity: 0.8;*/
+	bottom: 10px;
+	overflow: scroll;
+}
 /****** CSS for the tables */
 #pz-info {
-	width: 100%;
+	/*width: 100%;*/
+	height: 50%;
 	display: inline;
-	margin-bottom: 20px;
+	padding-bottom: 20px;
+}
+#pz-info h2 {
+	margin-bottom: 12px;
+	/*background-color: #fff;
+	opacity: 0.8;*/
+	color: #000;
 }
 #pz-detail {
-	width: 100%;
+	/*width: 100%;*/
 	overflow: scroll;
-	height: 240px;
+	/*height: 240px;
+	height: 40vh;*/
+	bottom: 10px;
+}
+.hidden {
+	display: none;
 }
 #pz-detail-table {
 	width: 100%;
 	font-size: 0.60em;
+	bottom: 10px;
 }
 #pz-detail-table tr th, #pz-detail-table tr td {
 	text-align: left;
@@ -112,4 +141,15 @@ h1 {
 #content {
 	display: block;
 	margin: 30px 0;
+}
+@media only screen and (max-width: 900px) {
+	#buttons {
+		position: static;
+	}
+	#svg-map-container {
+		position: static;
+	}
+	#left-column {
+		position: static;
+	}	
 }
